# giant-squid

./: Cargo.toml  README.md
src/: core.rs  error.rs  lib.rs  main.rs
src/core/: tests.rs
