[package]
name = "giant-squid"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = { version = "0.3.2", optional = true }
csv-async = { version = "1.2", features = ["tokio"] } # Replaces the CSV crate
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.8", features = ["full"] }
tokio-stream = "0.1.7"
tokio-uring = { version = "0.1.0", optional = true }
tokio-util = { version = "0.6", features = ["codec"] }

[features]
async_file_reads = ["async-stream", "tokio-uring"]
